# DEPI-Project

./: .gitattributes  .gitignore  Crop_Yield_Prediction.ipynb  DEPI Final Project. PPT Template.pptx  Dockerfile  README.md  app.py  drift_analysis.py  main.py  pyproject.toml  requirements.txt  vercel.json
.streamlit/: config.toml
Documentation/: DEPI Presentation.pptx  Team_Members_Contact_List.xlsx  modern_card_finalBeroo.xlsx
models/: crop_encoder.pkl  crop_yield_ann.h5  crop_yield_ann.keras  crop_yield_model.pkl  region_encoder.pkl  scaler.pkl  soil_encoder.pkl  weather_encoder.pkl
notebooks/: Crop_Yield_Prediction.ipynb  Crop_Yield_Prediction_Algo.ipynb
static/: script.js  style.css
templates/: index.html
