[project]
name = "depi-project"
version = "1.0.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "streamlit==1.28.1",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "joblib==1.3.2",
    "scipy==1.11.4",
    "scikit-learn==1.3.2",
    "tensorflow==2.13.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"